2001-11-20  Bharat Mediratta  <bharat@menalto.com> (1.2.3)

	* v1.2.3 ships!

2001-11-19  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b9)

	* Yet another minor tweak for IE6 compatibility.  Changed the way that
	  the javascript-page-reload code works in view_album.php

2001-11-17  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b8)

	* [SECURITY] Fixed a bug where a bad guy could craft a url to index.php
	  that would allow remote file reading.  Thanks to Cabezon Aurelien for
	  finding the flaw.

	* Added the PostNuke style modversion array into version.php

2001-11-15  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b7)

	* The following characters can no longer be used in an album name:
 	  . (dot) # (pound) + (plus) 
	  This fixes bugs 461799, 466789, and 469346.

	* Fixed two bugs having to do with URL and local file uploads on
	  Win32.  We were accidentally trying to convert urls to win32 file
	  format (leading to urls like "http;\\foo\bar" -- eek) and we were not
	  opening binary files with the "b" flag (thanks trantori@users.sf.net)

2001-11-09  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b3)

	* Fixed the annoying bug where if you modify the admin account using
	  the [manage users] interface it would log you out and you'd lose the
	  admin-ness of that account.

2001-11-05  Chris Smith  <chris@jacko.com> (1.2.3-cvs-b2)

	* No longer use the array_reverse function, as some older php
	  installations complain about the two parameter version of it.

2001-11-05  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b1)

	* Added config wizard option to disable usage of flock(), since it
	  doesn't work in all environments.

2001-11-01  Bharat Mediratta  <bharat@menalto.com> (1.2.2)

	* v1.2.2 ships!

	* Added a fix to index.php so that it now detects it's Nuke module
	  name.  Now, you don't need to modify this variable by hand if you
	  rename your Gallery directory.

2001-10-29  Bharat Mediratta  <bharat@menalto.com> (1.2.2-cvs-b6)
