@@ -1,3 +1,11 @@
+2001-11-27  Bharat Mediratta  <bharat@menalto.com> (1.2.3-p1)
+
+	* Fix for bug #486228 -- Can't cancel comment in dialog box
+
+	* [SECURITY] Fixed a bug where a bad guy could use a malicious search
+	  string or comment value to see the cookie. Thanks to Cabezon Aurelien
+	  for finding the flaw.
+
 2001-11-20  Bharat Mediratta  <bharat@menalto.com> (1.2.3)
 
 	* v1.2.3 ships!
